# docs

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTES.md  README.md  build  deploy-xenweb1  mkdocs.yml  pyproject.toml  requirements.txt  serve
adr/: README.md
docs/: configuration.md  http.md  index.md  jobs.md  mkdocs-help.md  service-providers.md
docs/api/: model-router.md  router.md
docs/architecture/: bootstrap.md
docs/cli/: built-in-commands.md  commands.md  index.md  python-entrypoints.md  writing-commands.md
docs/database/: config.md  db-config.md  db-migrations.md  db-queries.md  db-sa-queries.md  db-sa-raw.md  db-tables.md  index.md  orm-basics.md  orm-model.md  orm-pydantic.md  orm-querybuilder.md  seeding.md  tables.md
docs/deeper/: cache.md  events.md  http-client.md  index.md  ioc.md  jobs.md  mail.md  modular.md  provider.md  redis.md  superdict.md  templating.md
docs/epologue/: index.md  mkdocs-help.md  release-notes.md
docs/features/: index.md
docs/files/: style.css
docs/getting-started/: configuration.md  deployment.md  directory-structure.md  installation.md
docs/http/: index.md
journal/: 2026-06-23.md  2026-06-24.md  2026-07-01.md  README.md
site/: 404.html  index.html  sitemap.xml
site/auto-api/: index.html
site/bootstrap/: index.html
site/cache/: index.html
site/cli/: index.html
site/database/: index.html
site/epologue/: index.html
site/events/: index.html
site/features/: index.html
site/files/: style.css
site/http/: index.html
site/ioc/: index.html
site/jobs/: index.html
site/mail/: index.html
(+106 files in other folders)
