[project]
name = "uvicore-docs"
version = "0.3"
description = "Uvicore Framework Documentation"
authors = [
    {name = "Matthew Reschke",email = "mail@mreschke.com"}
]
license = "MIT"
readme = "README.md"
#requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# mkdocs = "1.5.*"
# mkdocs-material = "9.5.*"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"









