[project]
name = "uvicore-docs"
version = "0.3"
description = "Uvicore Framework Documentation"
authors = [
    {name = "Matthew Reschke", email = "mail@mreschke.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.7.6,<10.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
